name:                haskell-base32-string
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sbditto85/haskell-base32-string#readme
license:             BSD3
license-file:        LICENSE
author:              Casey Allred
maintainer:          sbditto@gmail.com
copyright:           2017 Casey Allred
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ByteString.Base32
  build-depends:       base       >= 4.7  && < 5
                     , bytestring >= 0.10 && < 0.11
                     , memory     >= 0.14 && < 0.15
                     , vector     >= 0.12 && < 0.13
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-base32-string
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sbditto85/haskell-base32-string
